overlapping issues fixed

--- a/source/assets/stylesheets/pages/_about.scss
+++ b/source/assets/stylesheets/pages/_about.scss
@@ -1,7 +1,6 @@
 #about-section {
   position: relative;
   z-index: 2;
-  height: 100vh;
   display: flex;
   padding-bottom: 80px;
 }
