--- a/source/assets/stylesheets/pages/_media_queries.scss
+++ b/source/assets/stylesheets/pages/_media_queries.scss
@@ -162,7 +162,7 @@
     padding: 0;
   }
   section .title {
-    font-size: 32px;
+    font-size: 40px;
     letter-spacing: 10px;
     padding: 0 40px;
   }
